<resources>
    <string name="app_name">Take Inventory</string>
    <string name="clip_art_image_of_a_store">clip art image of a store</string>
    <string name="the_shelves_are_empty">The shelves are empty...</string>
    <string name="add_inventory_by_clicking_the_add_item_button">Add inventory by clicking the Add Item button</string>
    <string name="item_name">Item Name</string>
    <string name="quantity">Quantity</string>
    <string name="price">Price</string>
    <string name="dollar_sign_in_a_circle">dollar sign in a circle</string>
    <string name="image_of_item">image of item</string>
    <string name="change_quantity">Change Quantity</string>
    <string name="plus_1">plus 1</string>
    <string name="minus_one">minus one</string>
    <string name="place_order">Place Order</string>
    <string name="shopping_cart">shopping cart</string>
    <string name="delete_item">Delete Item</string>
    <string name="bin">bin</string>
    <string name="edit_item">Edit Item</string>
    <string name="pen">pen</string>
    <string name="item_price">Item Price (Int)</string>
    <string name="add_a_photo">Add a photo</string>
    <string name="camera_icon">camera icon</string>
    <string name="overview">Overview</string>
    <string name="delete_full_inventory">Delete Full Inventory</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="insert_dummy_data">Insert Dummy Data</string>
    <string name="current_quantity">Current Quantity</string>
    <string name="zero">0</string>
    <string name="editor_delete_item_failed">Error with deleting item</string>
    <string name="rows_deleted">rows deleted from inventory database</string>
    <string name="editor_activity_title_new_item">Add an Item</string>
    <string name="editor_activity_title_edit_item">Edit Item</string>
    <string name="cannot_have_negative_quanity">Cannot have negative quantity amounts</string>
    <string name="editor_insert_failed">Error with saving item</string>
    <string name="editor_insert_successful">Item saved.</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="delete_dialog_msg">Delete this item?</string>
    <string name="cancel">Cancel</string>
    <string name="editor_delete_item_successful">Item deleted.</string>
    <string name="order_summary_subject">Order Summary from Take Inventory app</string>
    <string name="items_to_restock_email">Required items to restock:</string>
    <string name="quantity_email">Quantity:</string>
    <string name="sale_button_pressed">Sale button pressed</string>
    <string name="product_name_required">Product name required. Item not saved.</string>
    <string name="price_amount_required">Price amount required. Item not saved.</string>
    <string name="item_needs_quantity">Please input a quantity for the item. Item not saved.</string>
    <string name="item_image_required">Item image required. Item not saved.</string>
</resources>
