<?xml version="1.0" encoding="utf-8"?>

<!-- Layout for a single list item in the inventory list -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:descendantFocusability="blocksDescendants"
    android:orientation="horizontal"
    android:padding="@dimen/common_padding">

    <TextView
        android:id="@+id/name"
        style="@style/ListItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingEnd="@dimen/end_0"
        android:paddingStart="@dimen/common_padding"
        android:text="@string/item_name" />

    <TextView
        android:id="@+id/item_quantity"
        style="@style/ListItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quantity" />

    <TextView
        android:id="@+id/item_price"
        style="@style/ListItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/price" />

    <ImageButton
        android:id="@+id/sale_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorIcon"
        android:contentDescription="@string/dollar_sign_in_a_circle"
        android:onClick="onSalePress"
        android:src="@drawable/item_sold" />


</LinearLayout>