<?xml version="1.0" encoding="utf-8"?>

<!-- Editor activity where the user can add items to the inventory and edit these items -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/common_padding"
    tools:context=".EditorActivity">

    <!-- Photo category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/add_a_photo" />

        <!-- Button to add a photo via an intent -->
        <ImageButton
            android:id="@+id/add_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/common_layout_margin"
            android:backgroundTint="@color/colorIcon"
            android:src="@mipmap/add_photo"
            android:contentDescription="@string/camera_icon" />

    </LinearLayout>

<!-- Overview category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/overview" />

        <!-- Input fields -->
        <LinearLayout
            android:layout_width="@dimen/end_0"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:paddingEnd="@dimen/thin_layout_margin"
            android:paddingStart="0dp"
            android:orientation="vertical">

            <!-- Item Name Field -->
            <EditText
                 style="@style/EditorFieldStyle"
                android:id="@+id/edit_item_name"
                android:hint="@string/item_name"
                android:inputType="textCapWords"/>

            <!-- Quantity in Stock Field -->
            <EditText
                style="@style/EditorFieldStyle"
                android:id="@+id/edit_quantity"
                android:hint="@string/quantity"
                android:inputType="number"/>

            <!-- Price Field has a whole number input to make it easier -->
            <EditText
                 style="@style/EditorFieldStyle"
                android:id="@+id/edit_price"
                android:hint="@string/cost_per_item_whole_number_only"
                android:inputType="number"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>