<?xml version="1.0" encoding="utf-8"?>

<!-- Layout for the inventory list -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.takeinventory.CatalogActivity">

    <ListView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/common_layout_margin"
        android:divider="@color/colorDivider"
        android:dividerHeight="@dimen/listitem_divider_height" />

    <!-- Empty view for the list -->

    <RelativeLayout
        android:id="@+id/empty_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/empty_store_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/clip_art_image_of_a_store"
            android:src="@drawable/empty_view" />

        <TextView
            android:id="@+id/empty_title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/empty_store_image"
            android:layout_centerHorizontal="true"
            android:fontFamily="casual"
            android:paddingTop="@dimen/common_padding"
            android:text="@string/the_shelves_are_empty"
            android:textAppearance="?android:textAppearanceMedium" />

        <TextView
            android:id="@+id/empty_subtitle_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/empty_title_text"
            android:layout_centerHorizontal="true"
            android:fontFamily="casual"
            android:paddingTop="@dimen/common_layout_margin"
            android:text="@string/add_inventory_by_clicking_the_add_item_button"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="@color/colorSecondaryText" />

    </RelativeLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="@dimen/common_padding"
        android:src="@drawable/create_new"
        app:backgroundTint="@color/colorIcon" />

</RelativeLayout>
